--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,5 @@ jobs:
     - run: npm ci
     - run: |
           touch .env
-          echo "${{secrets.SKALIAMA_ENV_FILE}}" > .env
+          echo "${{secrets.SKLAMA_ENV_FILE}}" > .env
     
