--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI/CD
 
 on:
@@ -10,25 +7,44 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-server:
     runs-on: self-hosted
 
     strategy:
       matrix:
-        node-version: [18.x,20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [18.x, 20.x]
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ matrix.node-version }} for Server
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - name: Install Dependencies (Server)
+      run: npm ci
+      working-directory: Server
     - run: |
-        touch .env
-        echo "${{ secrets.SKLAMA_ENV_FILE }}" > .env
+        touch Server/.env
+        echo "${{ secrets.SKLAMA_ENV_FILE }}" > Server/.env
 
-    
+  build-skailama:
+    runs-on: self-hosted
+
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }} for Skailama
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - name: Install Dependencies (Skailama)
+      run: npm ci
+      working-directory: Skailama
+    - run: |
+        touch Skailama/.env
+        echo "${{ secrets.SKLAMA_ENV_FILE }}" > Skailama/.env
